# Ring_Hook

./: .gitignore  README.md  build.gradle  module.gradle  settings.gradle
.github/workflows/: android.yml
apk_for_test/: build.gradle
apk_for_test/src/main/: AndroidManifest.xml
apk_for_test/src/main/cpp/: CMakeLists.txt  gstalker.cpp  utils.h
apk_for_test/src/main/res/layout/: activity_main.xml
apk_for_test/src/main/res/values/: strings.xml  themes.xml
apk_for_test/src/main/res/values-night/: themes.xml
hiddenapi/bridge/: build.gradle
hiddenapi/stubs/: build.gradle
module/: build.gradle
module/rust/: Cargo.toml
module/rust/src/: lib.rs
module/rust/src/ring/: init_helper.rs  mod.rs  utils.rs  zygisk_entry.rs
module/rust/src/ring/art_hook/: dex_loader.rs
module/rust/src/ring/manager/: config.rs  dex_loader.rs  manager.rs  mod.rs
module/rust/src/ring/native_hook/: mod.rs  symbol_info.rs
module/rust/src/ring/native_hook_instance/: android_log_print.rs  mod.rs  register_dexfile.rs  register_native_hooker_instance.rs
module/rust/src/zygisk/: api.rs  binding.rs  macros.rs  mod.rs  module.rs
module/src/main/: AndroidManifest.xml
module/src/main/cpp/: CMakeLists.txt
module/src/main/cpp/classfinder/: CMakeLists.txt  classfinder.c  classloader.cpp  classloader.h  logger.h
module/src/main/cpp/classfinder/include/: classfinder.h
module/src/main/cpp/dlfunc/: CMakeLists.txt
module/src/main/cpp/ring/: CMakeLists.txt  Ring.cpp
module/src/main/cpp/ring/core/: CMakeLists.txt  NativeInlineHook.cpp
module/src/main/cpp/ring/core/include/: NativeInlineHook.h
module/src/main/cpp/ring/include/: Ring.h
module/src/main/cpp/ring/manager/: CMakeLists.txt  NativeHooksManager.cpp
module/src/main/cpp/ring/manager/include/: NativeHooksManager.h
module/src/main/cpp/yahfa/: CMakeLists.txt  HookMain.c  utils.c
module/src/main/cpp/yahfa/dlfunc/: dlfunc.c
module/src/main/cpp/yahfa/include/: yahfa.h
module/src/main/java/lab/galaxy/yahfa/: HookMain.java
module/src/main/rust/: .gitignore  Cargo.toml  build.rs
module/src/main/rust/src/ring/: utils.rs  zygisk_entry.rs
module/src/main/rust/src/ring/art_hook/: dex_loader.rs  (+4 more)
module/src/main/rust/src/zygisk/: api.rs  binding.rs  macros.rs
template/magisk_module/: README.md  customize.sh  util_functions.sh
(+12 files in other folders)
