[package]
name = "zygisk"
version = "0.1.0"
edition = "2021"
authors = ["Kazurin Nanako <71819243+Kazurin-775@users.noreply.github.com>"]

[dependencies]
bitflags = "1.3.2"
jni = "0.19.0"
log = "0.4.14"
static_init = "1.0.2"

[lib]
name = "template"
crate_type = ["dylib"]

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11"