[package]
name = "zygisk"
version = "0.1.0"
edition = "2021"
authors = ["Gstalker <dreamstalker1003@qq.com>"]

[dependencies]
bitflags = "1.3.2"
jni = "0.19.0"
log = "0.4.14"
static_init = "1.0.2"
lazy_static = "1.4.0"
dobby-rs = "0.1.0"
nix = "0.23.1"

[lib]
name = "template"
crate_type = ["dylib"]

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11"